--- a/hopefulweb/GlobalCSS/styles.css
+++ b/hopefulweb/GlobalCSS/styles.css
@@ -2,25 +2,49 @@ a{
     text-decoration: none;
     color: #000000;
 }
+body{
+    background-color: #367cff;
+}
 .NAVBAR{
-    background: #699dff;
-    border: #000000 double;
+    background: #020427;
+    border: #000000 solid 2px;
     border-radius: 6px;
     background-clip: border-box;
     float: left;
+    margin-top: 0px;
     list-style: none;
-    padding-left: 0px;
-    padding-right: 20px;
-    padding-bottom: 5px;
+    padding: 0px;
+    width: 99%;
 }
 .NAVBUT{
-    margin: 2px;
-    border: 1px solid;
-    border-radius: 3px;
-    background-color: #367cff;
+    color: #1547a5;
+    margin-right: 2px;
+    font-size: larger;
     text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #020427;
+    text-align: center;
+    padding-top: 13px;
+    width: 10%;
+    float: right;
+    height: 40px;
+}
+#LAST{
+    margin: 0px;
+}
+#NAV_LOG{
+    float: left;
+    height: 40px;
+    width: 40px;
+    border-radius: 5px;
 }
 #NNAME{
-    margin-bottom: 5px;
-    margin-top: 3px;
+    font-size: large;
+    font-weight: 900;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-indent: .5%;
+    padding-top: 6px;
+    margin: 3px;
+    color: #1547a5;
+    float: left;
 }
