--- a/hopefulweb/GlobalCSS/styles.css
+++ b/hopefulweb/GlobalCSS/styles.css
@@ -6,11 +6,11 @@ body{
     background-color: #367cff;
 }
 .NAVBAR{
+    height: 55px;
     background: #020427;
     border: #000000 solid 2px;
     border-radius: 6px;
     background-clip: border-box;
-    float: left;
     margin-top: 0px;
     list-style: none;
     padding: 0px;
@@ -20,6 +20,7 @@ body{
     color: #1547a5;
     margin-right: 2px;
     font-size: larger;
+    font-weight: 900;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #020427;
@@ -28,6 +29,10 @@ body{
     width: 10%;
     float: right;
     height: 40px;
+    text-overflow: clip;
+}
+.test{
+    margin: 700px;
 }
 #LAST{
     margin: 0px;
@@ -36,6 +41,7 @@ body{
     float: left;
     height: 40px;
     width: 40px;
+    padding-top: 5px;
     border-radius: 5px;
 }
 #NNAME{
@@ -43,7 +49,7 @@ body{
     font-weight: 900;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-indent: .5%;
-    padding-top: 6px;
+    padding-top: 10px;
     margin: 3px;
     color: #1547a5;
     float: left;
